--- a/part-07-react-routers,custom-hooks,ui-frameworks,webpack/course/public/index.html
+++ b/part-07-react-routers,custom-hooks,ui-frameworks,webpack/course/public/index.html
@@ -24,6 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- For Material UI -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+
+    <!-- For React Boostrap (Bootstrap 5.1.3) -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
